tests/types/errors/invalid_cast_str_to_i32.mog
var label str = "123"
var n i32 = label as i32
